<resources>
    <string name="app_name">ELSAFA</string>
    <string name="safa_shop">Safa Shop</string>
    <string name="email">Email</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_guest">Enter as guest!</string>
    <string name="lower"><![CDATA[<]]></string>
    <string name="greater"><![CDATA[>]]></string>
    <string name="facebook_app_id">378523979825628</string>
    <string name="fb_login_protocol_scheme">fb378523979825628</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home2">MainActivity</string>
    <string name="shop">Shop</string>
    <string name="categories">Categories</string>
    <string name="account">Account</string>

    <string name="hello">Hello</string>
    <string name="flip_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non consectetur turpis. Morbi eu eleifend lacus.</string>
    <string name="flip_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non consectetur turpis. Morbi eu eleifend lacus.</string>
    <string name="flip_text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non consectetur turpis. Morbi eu eleifend lacus.</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start">Start</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="best_offers">Best offers</string>
    <string name="last_offers">Last offers</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="cafe">Cafe</string>
    <string name="title_activity_feed">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="checkout">checkout</string>
    <string name="total">Total</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="remove">Remove</string>
    <string name="total_bill">Total Bill</string>
    <string name="cafe_name">Lamera</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="title_activity_cafe_location">Map</string>


</resources>