<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/explore_shopping"
        android:title="@string/shop" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/categories"
        android:title="@string/categories" />


    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/wish"
        android:title="@string/wishlist" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/user"
        android:title="@string/account" />
</menu>