<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_shop">

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.whiteside.cafe.Shop.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.whiteside.cafe.Categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.whiteside.cafe.Account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.whiteside.cafe.Cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/cart_shop_action"
            app:destination="@id/navigation_shop" />
    </fragment>

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.whiteside.cafe.WishList.WishListFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist">
        <action
            android:id="@+id/wishlist_shop_action"
            app:destination="@id/navigation_shop" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.whiteside.cafe.SearchFragment"
        android:label="Search"
        tools:layout="@layout/search_fragment" />

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_settings"-->
    <!--        android:name="com.example.elsafa.ui.settings.SettingsFragment"-->
    <!--        android:label="@string/action_settings"-->
    <!--        tools:layout="@layout/fragment_settings" />-->
</navigation>