<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingAppPage">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="326dp"
        android:layout_height="590dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="326dp"
                android:layout_height="338dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/delivery_truck" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="49dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="370dp"
                android:gravity="center"
                android:text="Hello"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="244dp"
                android:layout_height="103dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="451dp"
                android:gravity="center"
                android:text="@string/flip_text1"
                android:textColor="@android:color/tertiary_text_light"
                android:textSize="18dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="326dp"
                android:layout_height="338dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hand" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="49dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="370dp"
                android:gravity="center"
                android:text="Hello"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="244dp"
                android:layout_height="103dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="451dp"
                android:gravity="center"
                android:text="@string/flip_text2"
                android:textColor="@android:color/tertiary_text_light"
                android:textSize="18dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="326dp"
                android:layout_height="338dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/payment_method" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="49dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="370dp"
                android:gravity="center"
                android:text="Hello"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="244dp"
                android:layout_height="103dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="451dp"
                android:gravity="center"
                android:text="@string/flip_text3"
                android:textColor="@android:color/tertiary_text_light"
                android:textSize="18dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ViewFlipper>

    <Button
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_below="@id/view_flipper"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/black_selector_button"
        android:onClick="startClicked"
        android:text="@string/start"
        android:textColor="#FFF" />

</RelativeLayout>